--- a/web/src/styles/components/UI/Question.css
+++ b/web/src/styles/components/UI/Question.css
@@ -31,7 +31,6 @@
 }
 
 .answer {
-    width: 100%;
     max-height: 0;
     overflow: hidden;
     overflow-wrap: break-word;
@@ -46,4 +45,34 @@
     padding: 20px;
     overflow: auto;
     max-height: 150px;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .question-block {
+        width: 70%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+    .question-block {
+        width: 70%;
+    }
+}
+
+@media (min-width: 651px) and (max-width: 767px) {
+    .question-block {
+        width: 70%;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 650px) {
+    .question-block {
+        width: 95%;
+    }
+}
+
+@media (max-width: 480px) {
+    .question-block {
+        width: 95%;
+    }
 }
