--- a/web/src/styles/components/UI/Workspace.css
+++ b/web/src/styles/components/UI/Workspace.css
@@ -86,6 +86,7 @@
 }
 
 .admin-button  {
+    position: relative;
     width: auto;
     height: 30px;
     display: flex;
@@ -233,4 +234,28 @@
 
 .admin-object-image {
     width: 100px;
+}
+
+.tag-menu-admin {
+    position: absolute;
+    display: none;
+    max-width: 400px;
+    width: auto;
+    max-width: 400px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    overflow-x: hidden;
+    left: 0;
+    gap: 20px;
+    top: 120%;
+    background-color: #0066ff;
+    border-radius: 16px;
+    z-index: 1;
+    transition: .3s;
+}
+
+.tag-menu-admin.opened {
+    display: flex;
 }
