--- a/web/src/styles/pages/Main.css
+++ b/web/src/styles/pages/Main.css
@@ -46,6 +46,105 @@
     max-width: 40%;
 }
 
+.project-filters-block {
+    position: relative;
+    width: 75%;
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px 0;
+}
+
+.drop-down {
+    position: relative;
+    display: flex;
+    align-items: center;
+    grid-column-gap: 0.75rem;
+    font-size: 25px;
+    color: #fff;
+    border-top: 2px solid transparent;
+    border-bottom: 2px solid transparent;
+    padding: 0.7rem 1.25rem 0.75rem;
+    opacity: .5;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.drop-down svg {
+    width: 25px;
+}
+
+.drop-down:hover {
+    opacity: 1;
+    border-bottom: 2px solid #fff;
+}
+
+.drop-down.active {
+    opacity: 1;
+    border-bottom: 2px solid #fff;
+}
+
+.drop-down-list {
+    position: absolute;
+    width: 200px;
+    max-height: 200px;
+    display: flex;
+    overflow-y: auto;
+    overflow-y: hidden;
+    font-size: 20px;
+    flex-direction: column;
+    opacity: 0;
+    top: 110%;
+    right: 0;
+    background-color: #fff;
+    z-index: 2;
+    border-radius: 6px;
+    padding: 5px 0;
+    box-shadow:  0 0 5px #000;
+    transition: .3s;
+}
+
+.drop-down-list.active {
+    opacity: 1;
+}
+
+.drop-down-item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: #000;
+    padding: 0 35px;
+    box-sizing: border-box;
+    text-align: center;
+    overflow-wrap: break-word;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.drop-down-item:hover {
+    background-color: #0000001e;
+}
+
+.filter-checkbox {
+    position: absolute;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    margin: 2px;
+    background-color: transparent;
+    border-radius: 100%;
+    border: 1px solid #000;
+    cursor: pointer;
+    left: 5px;
+    transition: .3s;
+}
+
+.filter-checkbox:checked {
+    background-color: #882EFD;
+}
+
 .projects-container {
     position: relative;
     align-items: center;
@@ -295,6 +394,14 @@
     .what-is-buttons {
         width: 60%;
     }
+    
+    .project-filters-block {
+        justify-content: center;
+    }
+
+    .drop-down-list {
+        right: auto;
+    }
 
     .we-can-offer-header {
         flex-direction: column;
@@ -336,6 +443,14 @@
     
     .what-is-buttons {
         width: 60%;
+    }
+
+    .project-filters-block {
+        justify-content: center;
+    }
+
+    .drop-down-list {
+        right: auto;
     }
 
     .projects-text {
@@ -394,6 +509,14 @@
     
     .what-is-buttons {
         width: 60%;
+    }
+
+    .project-filters-block {
+        justify-content: center;
+    }
+
+    .drop-down-list {
+        right: auto;
     }
 
     .projects-text {
@@ -455,6 +578,14 @@
         flex-direction: column;
     }
 
+    .project-filters-block {
+        justify-content: center;
+    }
+
+    .drop-down-list {
+        right: auto;
+    }
+
     .projects-text {
         width: 50%;
         flex-direction: column;
@@ -503,16 +634,34 @@
         height: auto;
         text-align: center;
     }
+
+    .our-statistic-block::before {
+        font-size: 102px;
+    }
 }
 
 @media (max-width: 480px) {
     .what-is {
-        width: 100%;
+        width: 60%;
     }
     
     .what-is-buttons {
         width: 70%;
         flex-direction: column;
+    }
+
+    .project-filters-block {
+        width: 100%;
+        justify-content: center;
+    }
+
+    .drop-down-list {
+        width: 30%;
+        right: auto;
+    }
+
+    .projects-container {
+        width: 60%;
     }
 
     .projects-text {
@@ -530,6 +679,10 @@
         display: none;
         opacity: 0;
         transform: none !important;
+    }
+
+    .we-can-offer-block {
+        width: 60%;
     }
 
     .we-can-offer-header {
@@ -553,6 +706,15 @@
         width: 90%;
     }
 
+    .offer-icon {
+        width: 25px;
+        height: 25px;
+    }
+
+    .our-services {
+        width: 60%;
+    }
+
     .our-services-content {
         flex-direction: column;
     }
@@ -573,5 +735,13 @@
         flex-direction: column;
         align-items: center;
         text-align: center;
+    }
+
+    .our-statistic-block::before {
+        font-size: 102px;
+    }
+
+    .questions-container {
+        width: 60%;
     }
 }
