--- a/web/public/Default.css
+++ b/web/public/Default.css
@@ -4,6 +4,20 @@
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: auto;
+}
+
+::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(180deg, #8F00FF 0%, #FF00D6 100%, #8F00FF 150%);
+    box-shadow: inset 2px 2px 5px 0 rgba(255, 255, 255, 0.5);
+    border-radius: 100px;
+}
+
 html {
     overflow-x: hidden;
     overflow-y: auto;
