--- a/web/src/styles/components/UI/ItemsListWorkspace.css
+++ b/web/src/styles/components/UI/ItemsListWorkspace.css
@@ -1,30 +1,38 @@
 .admin-items-list {
     width: 80%;
+    display: flex;
+    flex-direction: column;
     border-radius: 16px;
     overflow-y: auto;
     overflow-x: hidden;
+    max-height: 500px;
 }
 
-.admin-items-list tr {
+.admin-items-list tbody tr {
     position: relative;
     width: 100%;
     display: flex;
 }
 
-.admin-items-list th {
+.admin-items-list thead tr {
     display: flex;
     background-color: #181818;
 }
 
-.admin-items-list th td {
+.admin-items-list tbody {
+    display: flex;
+    flex-direction: column;
+}
+
+.admin-items-list tr {
     color: #ffffff;
 }
 
-.admin-items-list tr:nth-child(odd) {
+.admin-items-list tbody tr:nth-child(odd) {
     background-color: #c5c5c5;
 }
 
-.admin-items-list tr:nth-child(even) {
+.admin-items-list tbody tr:nth-child(even) {
     background-color: #e9e9e9;
 }
 
